<resources>
    <string name="app_name">MovieBase</string>

    <string-array name="genres_movie">
        <item>-</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="language_movie">
        <item>-</item>
        <item>EN</item>
        <item>JA</item>
        <item>VI</item>
        <item>KO</item>
        <item>ZH</item>
    </string-array>

    <string-array name="sort_by">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Recently released</item>
        <item>Least Popular</item>
        <item>Least Rated</item>
        <item>Released Ages Ago</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actor_place_of_birth">"Place of Birth: "</string>
    <string name="actor_birthday">"Birthday: "</string>
    <string name="actor_age">"Age: "</string>
    <string name="actor_deceased">" deceased"</string>
    <string name="movie_rating">"Rating: "</string>
    <string name="movie_release_date">"Release Date: "</string>
    <string name="actor_popularity">"Popularity: "</string>
    <string name="actor_known_for">Starred in:</string>
    <string name="home_home">Home</string>
    <string name="home_trending">Trending</string>
    <string name="home_trending_movie">Trending Movie</string>
    <string name="home_popular">Popular</string>
    <string name="home_action">Action</string>
    <string name="home_adventure">Adventure</string>
    <string name="home_animation">Animation</string>
    <string name="home_comedy">Comedy</string>
    <string name="home_crime">Crime</string>
    <string name="home_drama">Drama</string>
    <string name="home_actor_spotlight">Actor Spotlight</string>
    <string name="home_popularity">Popularity</string>
    <string name="home_starred_in">Starred in:</string>
    <string name="actor_actor">Actor</string>
    <string name="actor_featured_movies">Featured Movies</string>
    <string name="movie_movie_title">Movie Title</string>
    <string name="movie_movie_rating">Movie Rating</string>
    <string name="movie_add_to_saved_list">Add to Saved List</string>
    <string name="please_wait_8230">Please Wait…</string>
    <string name="mam_make_a_movie">Make A Movie!</string>
    <string name="mam_genre">Genre</string>
    <string name="mam_actor">Actor</string>
    <string name="mam_enter_actor_8230">Enter actor…</string>
    <string name="mam_sort_by">Sort By</string>
    <string name="mam_find_movies">Find movies!</string>
    <string name="saved_saved">Saved</string>
    <string name="search_movies_8230">Search movies…</string>

</resources>