<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".makeamovie.MakeAMovieFragment">

        <TextView
            android:id="@+id/tv_generate_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/nexa_heavy"
            android:textColor="@color/black"
            android:text="@string/mam_make_a_movie"
            android:textSize="20sp"
            android:gravity="center"
            app:drawableEndCompat="@drawable/ic_movie" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl_MaM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toBottomOf="@id/tv_generate_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_MaM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:backgroundTint="@color/grey">

                    <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/ctb_MaM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentScrim="@color/blue_crayola"
                        android:fitsSystemWindows="true"
                        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                        app:titleEnabled="false" >

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar_MaM"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:title="Filter" >

                            <ImageView
                                android:id="@+id/iv_toolbar_drag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginEnd="10dp"
                                android:visibility="invisible"
                                android:src="@drawable/ic_drag" />
                        </androidx.appcompat.widget.Toolbar>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_collapseMode="parallax"
                            android:layout_marginTop="50dp">

                            <LinearLayout
                                android:layout_marginTop="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_collapseMode="parallax"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/tv_MaM_genre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/MaM_filter_margin_start"
                                    android:textSize="@dimen/MaM_filter_text_size"
                                    android:textColor="@color/black"
                                    android:text="@string/mam_genre" />

                                <Spinner
                                    android:id="@+id/spinner_MaM_genre_one"
                                    android:layout_width="@dimen/MaM_spinner_width"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@drawable/mam_spinner"
                                    android:layout_marginStart="@dimen/MaM_spinner_margin_start"/>

                                <Spinner
                                    android:id="@+id/spinner_MaM_genre_two"
                                    android:layout_width="@dimen/MaM_spinner_width"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/mam_spinner"
                                    android:layout_marginStart="@dimen/MaM_spinner_margin_start"
                                    android:layout_marginEnd="20dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll_MaM_actors"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_collapseMode="parallax"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:id="@+id/tv_MaM_actor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/MaM_filter_margin_start"
                                    android:textSize="@dimen/MaM_filter_text_size"
                                    android:textColor="@color/black"
                                    android:text="@string/mam_actor" />

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/et_MaM_actor_one"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/mam_enter_actor_8230"
                                    android:layout_weight="1"
                                    android:inputType="textCapWords"
                                    android:layout_marginStart="@dimen/MaM_actor_edit_text_margin_start"/>

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/et_MaM_actor_two"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="@string/mam_enter_actor_8230"
                                    android:inputType="textCapWords"
                                    android:layout_marginStart="@dimen/MaM_actor_edit_text_margin_start"
                                    android:layout_marginEnd="20dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll_MaM_sort_by"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_collapseMode="parallax"
                                android:layout_marginTop="15dp">

                                <TextView
                                    android:id="@+id/tv_MaM_sort_by"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/MaM_filter_margin_start"
                                    android:textSize="@dimen/MaM_filter_text_size"
                                    android:textColor="@color/black"
                                    android:text="@string/mam_sort_by" />

                                <Spinner
                                    android:id="@+id/spinner_MaM_sort_by"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/mam_spinner"
                                    android:layout_marginStart="40dp"/>
                            </LinearLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/cl_MaM_movies"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="10dp">

                                <Button
                                    android:id="@+id/btn_MaM_submit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:text="@string/mam_find_movies"
                                    android:layout_marginTop="10dp" />

                                <ImageView
                                    android:id="@+id/iv_MaM_drag"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="10dp"
                                    android:layout_marginTop="10dp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:src="@drawable/ic_drag" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>
                    </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_MaM_movies"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rl_page_buttons"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                />

            <RelativeLayout
                android:id="@+id/rl_page_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/rv_MaM_movies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/iv_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_arrow_back" />

                <ImageView
                    android:id="@+id/iv_arrow_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_arrow_forward" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_anchor="@id/appbar_MaM"
                app:layout_anchorGravity="bottom"
                android:visibility="gone"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>